input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the slider axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_slider_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the wheel axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_wheel_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the X coordinate of the tablet tool, in mm from the top left"]
    #[doc = " corner of the tablet in its current logical orientation. Use"]
    #[doc = " libinput_event_tablet_tool_get_x_transformed() for transforming the axis"]
    #[doc = " value into a different coordinate space."]
    #[doc = ""]
    #[doc = " @note On some devices, returned value may be negative or larger than the"]
    #[doc = " width of the device. See @ref tablet-bounds for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_x(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the Y coordinate of the tablet tool, in mm from the top left"]
    #[doc = " corner of the tablet in its current logical orientation. Use"]
    #[doc = " libinput_event_tablet_tool_get_y_transformed() for transforming the axis"]
    #[doc = " value into a different coordinate space."]
    #[doc = ""]
    #[doc = " @note On some devices, returned value may be negative or larger than the"]
    #[doc = " width of the device. See @ref tablet-bounds for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_y(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event."]
    #[doc = " If the tool employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " This value is in screen coordinate space, the delta is to be interpreted"]
    #[doc = " like the return value of libinput_event_pointer_get_dx()."]
    #[doc = " See @ref tablet-relative-motion for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet event"]
    #[doc = " @return The relative x movement since the last event"]
    pub fn libinput_event_tablet_tool_get_dx(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event."]
    #[doc = " If the tool employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " This value is in screen coordinate space, the delta is to be interpreted"]
    #[doc = " like the return value of libinput_event_pointer_get_dx()."]
    #[doc = " See @ref tablet-relative-motion for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet event"]
    #[doc = " @return The relative y movement since the last event"]
    pub fn libinput_event_tablet_tool_get_dy(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current pressure being applied on the tool in use, normalized"]
    #[doc = " to the range [0, 1]."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_pressure(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current distance from the tablet's sensor, normalized to the"]
    #[doc = " range [0, 1]."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_distance(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current tilt along the X axis of the tablet's current logical"]
    #[doc = " orientation, in degrees off the tablet's z axis. That is, if the tool is"]
    #[doc = " perfectly orthogonal to the tablet, the tilt angle is 0. When the top"]
    #[doc = " tilts towards the logical top/left of the tablet, the x/y tilt angles are"]
    #[doc = " negative, if the top tilts towards the logical bottom/right of the"]
    #[doc = " tablet, the x/y tilt angles are positive."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the axis in degrees"]
    pub fn libinput_event_tablet_tool_get_tilt_x(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current tilt along the Y axis of the tablet's current logical"]
    #[doc = " orientation, in degrees off the tablet's z axis. That is, if the tool is"]
    #[doc = " perfectly orthogonal to the tablet, the tilt angle is 0. When the top"]
    #[doc = " tilts towards the logical top/left of the tablet, the x/y tilt angles are"]
    #[doc = " negative, if the top tilts towards the logical bottom/right of the"]
    #[doc = " tablet, the x/y tilt angles are positive."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis in degrees"]
    pub fn libinput_event_tablet_tool_get_tilt_y(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current z rotation of the tool in degrees, clockwise from the"]
    #[doc = " tool's logical neutral position."]
    #[doc = ""]
    #[doc = " For tools of type @ref LIBINPUT_TABLET_TOOL_TYPE_MOUSE and @ref"]
    #[doc = " LIBINPUT_TABLET_TOOL_TYPE_LENS the logical neutral position is"]
    #[doc = " pointing to the current logical north of the tablet. For tools of type @ref"]
    #[doc = " LIBINPUT_TABLET_TOOL_TYPE_BRUSH, the logical neutral position is with the"]
    #[doc = " buttons pointing up."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_rotation(event: *mut libinput_event_tablet_tool) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Returns the current position of the slider on the tool, normalized to the"]
    #[doc = " range [-1, 1]. The logical zero is the neutral position of the slider, or"]
    #[doc = " the logical center of the axis. This axis is available on e.g. the Wacom"]
    #[doc = " Airbrush."]
    #[doc = ""]
    #[doc = " If this axis does not exist on the current tool, this function returns 0."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The current value of the the axis"]
    pub fn libinput_event_tablet_tool_get_slider_position(
        event: *mut libinput_event_tablet_tool,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the delta for the wheel in degrees."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The delta of the wheel, in degrees, compared to the last event"]
    #[doc = ""]
    #[doc = " @see libinput_event_tablet_tool_get_wheel_delta_discrete"]
    pub fn libinput_event_tablet_tool_get_wheel_delta(
        event: *mut libinput_event_tablet_tool,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the delta for the wheel in discrete steps (e.g. wheel clicks)."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return The delta of the wheel, in discrete steps, compared to the last event"]
    #[doc = ""]
    #[doc = " @see libinput_event_tablet_tool_get_wheel_delta_discrete"]
    pub fn libinput_event_tablet_tool_get_wheel_delta_discrete(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Return the current absolute x coordinate of the tablet tool event,"]
    #[doc = " transformed to screen coordinates."]
    #[doc = ""]
    #[doc = " @note This function may be called for a specific axis even if"]
    #[doc = " libinput_event_tablet_tool_*_has_changed() returns 0 for that axis."]
    #[doc = " libinput always includes all device axes in the event."]
    #[doc = ""]
    #[doc = " @note On some devices, returned value may be negative or larger than the"]
    #[doc = " width of the device. See @ref tablet-bounds for more details."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @param width The current output screen width"]
    #[doc = " @return the current absolute x coordinate transformed to a screen coordinate"]
    pub fn libinput_event_tablet_tool_get_x_transformed(
        event: *mut libinput_event_tablet_tool,
        width: u32,
    ) -> f64;
}
